Fix part of #22082: Migrate ng-if to *ng-if (#22118)
* Removed instances of ng-if

* Removed instances of ng-hide

* Removed instances of ng-show

* Removed instances of ng-click

* Removed instances of

* Removed instances of

* Removed instances of

* Removed instances of ng-model

* Removed instances of unit-test-utils.ajs.ts

* lint fix

* lint fix

* fix frontend tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,8 +59,7 @@
     "core/tests",
     "**/*.spec.ts",
     "**/*Spec.ts",
-    "**/*.ajs.ts",
-    "core/templates/tests/unit-test-utils.ajs.ts"
+    "**/*.ajs.ts"
   ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": false,
